Update 404 - Shannen Pio Blog.html

--- a/404 - Shannen Pio Blog.html
+++ b/404 - Shannen Pio Blog.html
@@ -8,10 +8,10 @@
     <title>404 - Adhy Suryadi Blog</title>
     <link rel="canonical" href="http://adhysuryadi.xyz/">
     <link href="http://adhysuryadi.xyz/img/favicon/favicon.ico" rel="icon" type="image/x-icon">
-    <link href="http://adhysuryadi.xyz/img/favicon/favicon-32x32.png" rel="icon" sizes="32x32">
-    <link href="http://adhysuryadi.xyz/img/favicon/android-icon-192x192.png" rel="icon" sizes="192x192">
-    <link href="http://adhysuryadi.xyz/img/favicon/apple-icon-180x180.png" rel="apple-touch-icon-precomposed">
-    <meta content="http://adhysuryadi.xyz/img/favicon/ms-icon-144x144.png" name="msapplication-TileImage">
+    <link href="http://2.bp.blogspot.com/-UYdunOv2cDU/Wl8wI8lVhLI/AAAAAAAAATc/lMzRbGChwDQoFSSLkmbgInz_PCf9AB7RwCLcBGAs/s1600/32x32.png" rel="icon" sizes="32x32">
+    <link href="http://3.bp.blogspot.com/-tGsSv9Kp56c/Wl8w3yYkADI/AAAAAAAAATk/_ceSwif92ooq1VMlgZtKbQPWDW9VpMTIACLcBGAs/s1600/182x192.png" rel="icon" sizes="192x192">
+    <link href="http://4.bp.blogspot.com/-UuBKE6GQ3Gs/Wl8xNezwIOI/AAAAAAAAATs/o3_LK6bCBcIbmpGn4c5tbsLkbxUwrO9WwCLcBGAs/s1600/180x180.png" rel="apple-touch-icon-precomposed">
+    <meta content="http://1.bp.blogspot.com/-3M28088Yk6I/Wl8xgHO6ImI/AAAAAAAAAT0/E3A_onu8QVg05JfvBtgcTvSssBraDXOPgCLcBGAs/s1600/144x144.png" name="msapplication-TileImage">
         <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="./404 - Shannen Pio Blog_files/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -36,7 +36,7 @@ html {
     height: 100%;
 }
 body {
-    background: url(http://i.imgur.com/CZdBKjO.gif) no-repeat center center fixed; 
+    background: url(http://i.imgur.com/SGsObEf.gif) no-repeat center center fixed; 
     background-size: cover;
     font-family: 'Raleway', sans-serif;
     background-color: #342643; 
