Update 404 - Shannen Pio Blog.html

--- a/404 - Shannen Pio Blog.html
+++ b/404 - Shannen Pio Blog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!-- saved from url=(0032)http://adhysuryadi.xyz/generator -->
+<!-- saved from url=(0032)http://shannenpio.blogspot.com/generator -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Coretan kisah sebuah kehidupan.">
     <title>404 - Adhy Suryadi Blog</title>
-    <link rel="canonical" href="http://adhysuryadi.xyz/">
+    <link rel="canonical" href="http://shannenpio.blogspot.com/">
     <link href="http://adhysuryadi.xyz/img/favicon/favicon.ico" rel="icon" type="image/x-icon">
     <link href="http://2.bp.blogspot.com/-UYdunOv2cDU/Wl8wI8lVhLI/AAAAAAAAATc/lMzRbGChwDQoFSSLkmbgInz_PCf9AB7RwCLcBGAs/s1600/32x32.png" rel="icon" sizes="32x32">
     <link href="http://3.bp.blogspot.com/-tGsSv9Kp56c/Wl8w3yYkADI/AAAAAAAAATk/_ceSwif92ooq1VMlgZtKbQPWDW9VpMTIACLcBGAs/s1600/182x192.png" rel="icon" sizes="192x192">
